Added Custom Range Slider

--- a/RangeSlider/index.html
+++ b/RangeSlider/index.html
@@ -5,9 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>HTML</title>
+  <title>Range Slider</title>
   
-  <!-- HTML -->
+  
+  
+  
   
 
   <!-- Custom Styles -->
@@ -15,7 +17,13 @@
 </head>
 
 <body>
-  <p>Nothing to see here...</p>
+ <input type="range" name="" id="slider" value="" min="0" max="100" value="50" class="slider"/>
+ 
+ <h3>
+   Value : <span id="demo"></span>
+ </h3>
+
+  
   <!-- Project -->
   <script src="main.js"></script>
 </body>
